[package]
name = "dinglebit-config"
version = "1.1.0"
authors = ["Joshua Marsh (icub3d) <joshua@themarshians.com>"]
edition = "2018"
description = "simplified configuration interface"
repository = "https://github.com/dinglebit/config.rs"
homepage = "https://www.dinglebit.com/"
readme = "README.md"
categories = ["config"]
license = "MIT"
documentation = "https://docs.rs/dinglebit-config"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
lazy_static = "1.4.0"
